# tallertechnologies

./: README.md  manage.py  pyproject.toml
mini_venmo/: apps.py  mini_venmo.py  models.py  tests.py
mini_venmo/migrations/: 0001_initial.py
mini_venmo_project/: asgi.py  settings.py  urls.py  wsgi.py
